@@ -9,3 +9,7 @@ ENABLE_EURO=no
 # For example to setup french font and charmap use:
 #  CONSOLECHARS_ARGS="-f lat1-16 -m iso15"
 CONSOLECHARS_ARGS=
+
+# This variable contains numbers of console nodes in /dev/ on which
+# fonts and charmap given in CONSOLECHARS_ARGS will be set
+TTY_NUMS="1 2 3 4 5 6"
