@@ -1,3 +1,7 @@
+2006-02-14 Pol Vinogradov <vin.public@gmail.com>
+	* init.d/keymap.sh, init.d/keymap.conf: added posibility to set
+		CONSOLECHARS_ARGS for many consoles, not only the first one
+
 2006-01-18 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* init.d/devices: re-enable udevstart for now, coldplug needs to wait
 	  for the required disc devices to come up so mountall.sh doesn't fail.
